@@ -17,9 +17,14 @@ android {
         implementation "io.noties.markwon:recycler:$markwonVersion"
         implementation "org.lsposed.hiddenapibypass:hiddenapibypass:2.0"
 
+        // 使用旧版本 window 库，避免 kotlin 协程的 Java 9+ 模块信息
         // Do not increment version higher than 1.0.0-alpha09 since it will break ViewUtils and needs to be looked into
         // noinspection GradleDependency
-        implementation "androidx.window:window:1.0.0-alpha09"
+        implementation("androidx.window:window:1.0.0-alpha09") {
+            exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
+            exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-core'
+            exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-core-jvm'
+        }
 
         // Do not increment version higher than 2.5 or there
         // will be runtime exceptions on android < 8
@@ -53,6 +58,11 @@ android {
         exclude 'META-INF/versions/**'
         exclude 'META-INF/module-info.class'
         exclude 'module-info.class'
+        exclude 'META-INF/MANIFEST.MF'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
     }
 
     compileOptions {
@@ -65,7 +75,12 @@ android {
 
     tasks.withType(JavaCompile) {
         options.fork = true
-        options.forkOptions.jvmArgs += ['-Xmx2048m']
+        options.forkOptions.jvmArgs += [
+            '-Xmx2048m',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED'
+        ]
         options.compilerArgs += ['-Xlint:none', '-proc:none']
         options.incremental = false
     }
@@ -81,6 +96,8 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
+    // 禁用注解处理器
+    // annotationProcessor "androidx.annotation:annotation:1.3.0"
 }
 
 task sourceJar(type: Jar) {
